tests/error/comptime/pointer_arithmetic13.bz
// error: invalid pointer arithmetic operation with type '*i32' and offset -1
// note: while evaluating expression at compile time
// note: address points to a subobject that is not in an array in this stack object
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let t = [i32, i32]();
		&t[1] - 1;
	});
}
